plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'com.wombat'
version = '1.0.0'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.xerial:sqlite-jdbc:3.45.0.0'
    implementation 'org.controlsfx:controlsfx:11.2.0'
}

javafx {
    version = '21'
    modules = ['javafx.controls', 'javafx.fxml']
}

application {
    mainClass = 'com.wombat.photometry.PhotometryApp'
}

run {
    jvmArgs = ['--add-opens', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED']
}
